[package]
name = "sndr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flate2 = "1.0"
reqwest = { version = "0.11.23", features = ["json"] }
tokio = { version = "1", features = ["full"] }
clap = "4.4.12"
